[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/gui/intro/src/logo_nose.png" type="Texture" id=1]
[ext_resource path="res://scenes/gui/intro/src/logo_front.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui/intro/src/logo_eyes.png" type="Texture" id=3]
[ext_resource path="res://scenes/gui/intro/src/logo_frame.png" type="Texture" id=4]
[ext_resource path="res://scenes/gui/intro/src/logo.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/gui/intro/intro.gd" type="Script" id=6]
[ext_resource path="res://scenes/gui/intro/src/intro_1.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/gui/intro/src/intro_2.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/gui/intro/src/intro_3.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=3]
size = 180
outline_size = 5
outline_color = Color( 0.490196, 1, 0.435294, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Front:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Frame:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Frame:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Front/Eyes:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Label:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Label:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Frame:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "logo"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("Front:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Frame:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Frame:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Front/Eyes:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.2, 2.4, 2.6, 2.8 ),
"transitions": PoolRealArray( 1, 0.5, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Label:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Label:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 4, 4.5 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/8/type = "audio"
tracks/8/path = NodePath("AudioStreamPlayer")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.6, 2.3, 2.7 )
}
tracks/9/type = "audio"
tracks/9/path = NodePath("AudioStreamPlayer2")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 1.8 )
}
tracks/10/type = "value"
tracks/10/path = NodePath("Frame:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.8, 1.9, 2.1 ),
"transitions": PoolRealArray( 1, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="Intro" type="Node"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScreenCenter" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="Logo" type="Node2D" parent="ScreenCenter"]
position = Vector2( 0, -52 )
scale = Vector2( 0.29388, 0.29388 )

[node name="Frame" type="Sprite" parent="ScreenCenter/Logo"]
position = Vector2( 0, 27.222 )
texture = ExtResource( 4 )
offset = Vector2( 0, 4.97479 )

[node name="Front" type="Sprite" parent="ScreenCenter/Logo"]
position = Vector2( 0, 49.5004 )
texture = ExtResource( 2 )
offset = Vector2( 0, -1.30359 )

[node name="Eyes" type="Sprite" parent="ScreenCenter/Logo/Front"]
position = Vector2( 0, -153.304 )
texture = ExtResource( 3 )

[node name="Nose" type="Sprite" parent="ScreenCenter/Logo/Front"]
position = Vector2( 0, -65.3036 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="ScreenCenter/Logo"]
margin_left = -952.77
margin_top = 707.772
margin_right = 915.23
margin_bottom = 909.772
custom_colors/font_color = Color( 0.0862745, 0.356863, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Muriki Game Studio"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ScreenCenter/Logo"]
stream = ExtResource( 9 )
bus = "SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ScreenCenter/Logo"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenCenter/Logo"]
anims/RESET = SubResource( 1 )
anims/logo = SubResource( 2 )

[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="animation_finished" from="ScreenCenter/Logo/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
